force-app/main/default/objects/Clausula_Padrao__c/Clausula_Padrao__c.object-meta.xml
<CustomObject>
    <description>Clausulas padrao pertencentes a um contrato padrao.</description>
    <label>Clausula Padrao</label>
    <nameField>
        <displayFormat>CLP-{00000}</displayFormat>
        <label>Numero da Clausula Padrao</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clausulas Padrao</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>