force-app/main/default/objects/Clausula_Padrao__c/fields/Ativa__c.field-meta.xml
<CustomField>
    <fullName>Ativa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se a clausula padrao deve ser usada na geracao de contratos.</description>
    <label>Ativa</label>
    <type>Checkbox</type>
</CustomField>