force-app/main/default/objects/Clausula_Padrao__c/fields/Contrato_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Padrao__c</fullName>
    <description>Contrato padrao ao qual esta clausula pertence.</description>
    <label>Contrato Padrao</label>
    <referenceTo>Contrato_Padrao__c</referenceTo>
    <relationshipLabel>Clausulas Padrao</relationshipLabel>
    <relationshipName>Clausulas_Padrao</relationshipName>
    <type>MasterDetail</type>
</CustomField>