force-app/main/default/objects/Clausula_Padrao__c/fields/Obrigatoria__c.field-meta.xml
<CustomField>
    <fullName>Obrigatoria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a clausula e obrigatoria para o contrato.</description>
    <label>Obrigatoria</label>
    <type>Checkbox</type>
</CustomField>