force-app/main/default/objects/Clausula_Padrao__c/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <description>Ordem de exibicao da clausula no contrato.</description>
    <label>Ordem</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>