force-app/main/default/objects/Clausula_Padrao__c/fields/Texto_Base__c.field-meta.xml
<CustomField>
    <fullName>Texto_Base__c</fullName>
    <description>Texto base da clausula padrao.</description>
    <label>Texto Base</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>